# FoundationIO

./: .clang-format  .gitattributes  .gitignore  LICENSE  README.md
Projects/: BuildSettings.cmake  CMakeLists.txt  DetectArchitecture.cmake  FoundationIO.sln  FoundationIO.vcxproj  FoundationIO.vcxproj.filters  GetGitHash.cmd  GetGitHash.cmd.in  GetGitHash.sh  GetVersion.cmake  RegisterTests.cmake  TextIOTables_Create.sh
Projects/FoundationIO.xcodeproj/: project.pbxproj
Resources/: FoundationIO.pc.in  FoundationIO.rc  FoundationIO.rc.in
Tests/: Test_BitIO.c  Test_BufferIO.c  Test_CommandLineIO.c  Test_ContainerIO.c  Test_CryptographyIO.c  Test_FileIO.c  Test_FormatIO.c  Test_Math.c  Test_MathIO.c  Test_NetworkIO.c  Test_PlatformIO.c  Test_StringIO.c
Tests/TextIO/: Test_CommandLineIO.c  Test_FormatIO.c  Test_LocalizationIO.c  Test_StringIO.c
